syntax = "proto3";
package post_grpc;
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


service PostService {
  rpc Create(CreateReq) returns (Post); // 投稿を作成
  rpc GetByID(ID) returns (Post); // post_idで投稿を取得
  rpc GetList(ListReq) returns (ListPost); // 取得件数と日時を指定して投稿を複数取得
  rpc Update(UpdateReq) returns (Post); // 投稿を更新
  rpc Delete(DeleteReq) returns (google.protobuf.BoolValue); // 投稿を削除
}

message Post {
  int64 id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  int64 user_id = 6;
}

message CreateReq {
  string title = 1 [(validate.rules).string = {min_len: 1, max_len: 20}]; // 1文字以上20文字以下
  string content = 2 [(validate.rules).string = {min_len: 1, max_len: 2000}];
  int64 user_id= 3 [(validate.rules).int64.gte = 1];
}

message UpdateReq  {
  int64 id = 1 [(validate.rules).int64.gte = 1];
  string title = 2 [(validate.rules).string = {min_len: 1, max_len: 20}];
  string content = 3 [(validate.rules).string = {min_len: 1, max_len: 2000}];
  int64 user_id= 4 [(validate.rules).int64.gte = 1];
}

message ListReq {
  google.protobuf.Timestamp datetime = 1 [(validate.rules).timestamp.required = true];
  int64 num = 2 [(validate.rules).int64 = {gte:1, lte: 30}];
}

message DeleteReq {
  int64 id = 1 [(validate.rules).int64.gte = 1];
  int64 user_id= 2 [(validate.rules).int64.gte = 1];
}

message ID {
  int64 id = 1 [(validate.rules).int64.gte = 1];
}

message ListPost {
  repeated Post posts = 1;
}