syntax = "proto3";
package post_grpc;
import "google/protobuf/timestamp.proto";

service PostService {
  rpc Create(Post) returns (Post);
  rpc GetByID(ID) returns (Post);
  rpc GetList(ListReq) returns (ListPost);
  rpc Update(Post) returns (Post);
  rpc Delete(ID) returns (DeleteRes);
}

message Post {
  int64 id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  int64 user_id = 6;
}

message ID {
  int64 id = 1;
}

message ListReq {
  google.protobuf.Timestamp datetime = 1;
  int64 num = 2;
}

message ListPost {
  repeated Post posts = 1;
}

message DeleteRes {
  bool deleted = 1;
}
